@@ -1,0 +1,31 @@
+##fileformat=VCFv4.1
+##samtoolsVersion=0.1.14 (r933:170)
+##INFO=<ID=INDEL,Number=0,Type=Flag,Description="Indicates that the variant is an INDEL.">
+##INFO=<ID=DP,Number=1,Type=Integer,Description="Raw read depth">
+##INFO=<ID=AF1,Number=1,Type=Float,Description="Max-likelihood estimate of the site allele frequency of the first ALT allele">
+##INFO=<ID=CI95,Number=2,Type=Float,Description="Equal-tail Bayesian credible interval of the site allele frequency at the 95% level">
+##INFO=<ID=DP4,Number=4,Type=Integer,Description="# high-quality ref-forward bases, ref-reverse, alt-forward and alt-reverse bases">
+##INFO=<ID=MQ,Number=1,Type=Integer,Description="Root-mean-square mapping quality of covering reads">
+##INFO=<ID=FQ,Number=1,Type=Float,Description="Phred probability of all samples being the same">
+##INFO=<ID=QCHI2,Number=1,Type=Integer,Description="Phred scaled PCHI2.">
+##INFO=<ID=PCHI2,Number=1,Type=Float,Description="Posterior weighted chi^2 P-value for testing the association between group1 and group2 samples.">
+##INFO=<ID=PC2,Number=2,Type=Integer,Description="Phred probability of the nonRef allele frequency in group1 samples being larger (,smaller) than in group2.">
+##INFO=<ID=RP,Number=1,Type=Integer,Description="# permutations yielding a smaller PCHI2.">
+##INFO=<ID=PV4,Number=4,Type=Float,Description="P-values for strand bias, baseQ bias, mapQ bias and tail distance bias">
+##FORMAT=<ID=GT,Number=1,Type=String,Description="Genotype">
+##FORMAT=<ID=PL,Number=-1,Type=Integer,Description="List of Phred-scaled genotype likelihoods, number of values is (#ALT+1)*(#ALT+2)/2">
+##FORMAT=<ID=GQ,Number=1,Type=Integer,Description="Genotype Quality">
+##FORMAT=<ID=GL,Number=3,Type=Float,Description="Likelihoods for RR,RA,AA genotypes (R=ref,A=alt)">
+##FORMAT=<ID=DP,Number=1,Type=Integer,Description="# high-quality bases">
+##FORMAT=<ID=SP,Number=1,Type=Integer,Description="Phred-scaled strand bias P-value">
+#CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO	FORMAT	results/IPBKRNW/IPBKRNW-replicate.bam	results/IPBKRNW/IPBKRNW-sorted.bam
+0	145497099	.	A	G	17.1	.	DP=2;AF1=0.9999;CI95=0.5,1;DP4=0,0,2,0;MQ=25;FQ=-30.8;QCHI2=1;PCHI2=0.0001;PC2=3,3	GT:PL:GQ	1/1:25,3,0:42	1/1:25,3,0:42
+1	29389393	.	AC	A	31.5	.	INDEL;DP=2;AF1=0.9999;CI95=0.5,1;DP4=0,0,0,2;MQ=37;FQ=-38.3;QCHI2=1;PCHI2=0.749;PC2=3,3	GT:PL:GQ	1/1:36,3,0:42	1/1:36,3,0:42
+1	44379612	.	CT	C	31.5	.	INDEL;DP=2;AF1=0.9999;CI95=0.5,1;DP4=0,0,0,2;MQ=37;FQ=-38.3;QCHI2=1;PCHI2=0.749;PC2=3,3	GT:PL:GQ	1/1:36,3,0:42	1/1:36,3,0:42
+1	113304121	.	C	A	7.84	.	DP=2;AF1=0.9999;CI95=0.5,1;DP4=0,0,2,0;MQ=37;FQ=-30.7;QCHI2=1;PCHI2=0.784;PC2=3,3	GT:PL:GQ	1/1:20,3,0:42	1/1:20,3,0:42
+1	239926953	.	C	CGA	33.5	.	INDEL;DP=2;AF1=0.9999;CI95=0.5,1;DP4=0,0,2,0;MQ=37;FQ=-38.3;QCHI2=1;PCHI2=0.749;PC2=3,3	GT:PL:GQ	1/1:37,3,0:42	1/1:37,3,0:42
+2	186893495	.	C	T	17.1	.	DP=2;AF1=0.9999;CI95=0.5,1;DP4=0,0,2,0;MQ=25;FQ=-30.8;QCHI2=1;PCHI2=0.752;PC2=3,3	GT:PL:GQ	1/1:25,3,0:42	1/1:25,3,0:42
+5	21610299	.	C	CGA	6.57	.	INDEL;DP=2;AF1=0.9999;CI95=0.5,1;DP4=0,0,2,0;MQ=23;FQ=-38.3;QCHI2=1;PCHI2=0.758;PC2=3,3	GT:PL:GQ	1/1:23,3,0:42	1/1:23,3,0:42
+6	48943221	.	T	TC	228	.	INDEL;DP=14;AF1=1;CI95=1,1;DP4=0,0,14,0;MQ=37;FQ=-57.3;QCHI2=0;PCHI2=0.01;PC2=3,3	GT:PL:GQ	1/1:136,21,0:87	1/1:136,21,0:87
+8	36216797	.	T	C	17.1	.	DP=2;AF1=0.9999;CI95=0.5,1;DP4=0,0,2,0;MQ=25;FQ=-30.8;QCHI2=1;PCHI2=0.752;PC2=3,3	GT:PL:GQ	1/1:25,3,0:42	1/1:25,3,0:42
+9	94234	.	TAA	TAAA	33.5	.	INDEL;DP=2;AF1=0.9999;CI95=0.5,1;DP4=0,0,2,0;MQ=37;FQ=-38.3;QCHI2=1;PCHI2=0.749;PC2=3,3	GT:PL:GQ	1/1:37,3,0:42	1/1:37,3,0:42
