@@ -1,4 +1,6 @@
 1.9.7.2
+ - FDR mode now supports reporting the top n hits irrespective of corrected q-value threshold (top n hits are
+   still defined by the ranking produced by ordering the hits by increasing q-value, for the last column adjusted).
  - VCFWriter now writes missing value '.' in ID and FILTER fields, as required by VCF 4.1 documentation
    (http://www.1000genomes.org/wiki/Analysis/Variant%20Call%20Format/vcf-variant-call-format-version-41)
    This change is required to read the files generated by Goby with the latest version of Tribble.
